Added more information regarding project B

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     <ul>
                         <li>Dean's List, Fall 2024</li>
                         <li>Dean's List, Spring 2025</li>
-                        <!-- Add more awards as needed -->
                     </ul>
                 </div>
     </section>
@@ -69,7 +68,7 @@
         <h2>Projects</h2>
         <ul>
             <li><strong>Project A:</strong> Creating a messaging application with a Java backend that uses Spring Boot, and a message broker (zeroMQ)</li>
-            <li><strong>Project B:</strong> Planning on making a webapp about soccer stats, and finding information about your favorite teams and players. I would like to make a authenticator that keeps track of each users favorited players and teams for easy access.</li>
+            <li><strong>Project B:</strong> Planning on making a webapp about soccer stats, and finding information about your favorite teams and players. I would like to make a authenticator that keeps track of each users favorited players and teams for easy access. I am planning on doing this using Spring Framework.</li>
             <li><strong>Project C:</strong> Planning on making a discord bot in Java. Mainly to mess around and see how discord bots work.</li>
         </ul>
     </section>
