Updated Projects section

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Project A:</strong> Creating a messaging application with a Java backend that uses Spring Boot, and a message broker (zeroMQ)</li>
-            <li><strong>Project B:</strong> Planning on making a webapp about soccer stats, and finding information about your favorite teams and players. I would like to make a authenticator that keeps track of each users favorited players and teams for easy access. I am planning on doing this using Spring Framework.</li>
+            <li><strong>Project A:</strong> Currently Building a Chat Application. This application uses JavaFX for the front end, and uses Valkey for the backend which allows users to message each other. We are planning on implementing a database to keep track of users and their messages. This project uses JavaFX, Java, Valkey, MySQL, Maven, Valkey Cache, and Google's Protobuff.</li>
+            <li><strong>Project B:</strong> Currently Building a web app that will show users past, current, and scheduled professional soccer matches. We will hopefully add player and match Statistics. It will also obtain and display news articles and section them by the leagues they talk about. For this we are using firebase for the front end and using it for authentication. We are going to use Java as the backend and implement a MySQL database to keep track of users and their preferences.</li>
             <li><strong>Project C:</strong> Planning on making a discord bot in Java. Mainly to mess around and see how discord bots work.</li>
         </ul>
     </section>
