Updated information so everything is current as of 1/13/2026

--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
             since that opened the door into creating software and websites. From here I joined Rowan's ACM chapter where I can connect with other students and professors who share my interests. I am also able to join committees, where I can
             learn more about different areas of computer science and technology.</p>
 
-            <p>Throughout College, I always was interested in learning how to code, and to build projects. Learning to program really excited me,
-            since that opened the door into creating software and websites. From here I joined Rowan's ACM chapter where I can connect with other students and professors who share my interests. I am also able to join committees, where I can
-            learn more about different areas of computer science and technology.</p>
-
             <div class="courses">
                 <h3>Relevant Course Work</h3>
                 <ul>
@@ -53,6 +49,7 @@
                     <li>Linear Algebra</li>
                     <li>Discrete Mathematics</li>
                     <li>Probability and Statistics</li>
+                    <li>Databases: System and Theory</li>
                 </ul>
             </div>
                 <div class="awards">
@@ -60,6 +57,7 @@
                     <ul>
                         <li>Dean's List, Fall 2024</li>
                         <li>Dean's List, Spring 2025</li>
+                        <li>Presidents List, Fall 2025</li>
                     </ul>
                 </div>
     </section>
@@ -67,9 +65,9 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Project A:</strong> Currently Building a Chat Application. This application uses JavaFX for the front end, and uses Valkey for the backend which allows users to message each other. We are planning on implementing a database to keep track of users and their messages. This project uses JavaFX, Java, Valkey, MySQL, Maven, Valkey Cache, and Google's Protobuff.</li>
-            <li><strong>Project B:</strong> Currently Building a web app that will show users past, current, and scheduled professional soccer matches. We will hopefully add player and match Statistics. It will also obtain and display news articles and section them by the leagues they talk about. For this we are using firebase for the front end and using it for authentication. We are going to use Java as the backend and implement a MySQL database to keep track of users and their preferences.</li>
-            <li><strong>Project C:</strong> Planning on making a discord bot in Java. Mainly to mess around and see how discord bots work.</li>
+            <li><strong>Project A (BlueWave):</strong> Built a Chat Application for ASRC federal in my Software Engineering 1 class. This application uses JavaFX for the front end, and uses Valkey for the backend which allows users to message each other. We are planning on implementing a database to keep track of users and their messages. This project uses JavaFX, Java, Valkey, MySQL, Maven, Valkey Cache, and Google's Protobuff.</li>
+            <li><strong>Project B (Jash Sports):</strong> Built a web app that shows users past, current, and scheduled professional soccer matches. There is also a section that shows user's relevant news articles pertaining to all big leagues. Users also have the ability to search and favorite teams, as long as their are logged in. This project was built with Firebase, HTML/CSS/JS, and Java. Javalin was used to connect the frontend to the backend</li>
+            <li><strong>Project C (Zerra):</strong> Building a file sharing web app, similar to google drive. User's will be able to upload files, and share them with their friends. This web app is being developed using React for the frontend and Spring Boot Web for the backend. We are also using Hibernate as well as Lombok.</li>
         </ul>
     </section>
 
@@ -77,7 +75,7 @@
         <h2>Contact</h2>
         <p>You can reach me at:</p>
         <ul>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/jake-miller-084b03296/">linkedin.com/in/jake-miller-084b03296/</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/jake-miller-ru27/">linkedin.com/in/jake-miller-ru27/</a></li>
             <li>GitHub: <a href="https://github.com/jakmills">github.com/jakmills</a></li>
         </ul>
     </section>
